Refs #99829 fixed new user creation form where you couldn't click on new items and give an overflow:auto to forms since users role mapping table needs scrolling

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -180,6 +180,9 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none; }
 
+form {
+  overflow: auto;
+}
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
